src/objects/Quote__c/fields/Primary_Quote__c.field-meta.xml
<CustomField>
    <fullName>Primary_Quote__c</fullName>
    <label>Primary Quote</label>
    <length>255</length>
    <type>Text</type>
</CustomField>