src/objects/Quote__c/fields/Quote_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Quote_Expiration_Date__c</fullName>
    <label>Quote Expiration Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>