src/objects/Quote__c/fields/Quote_ID__c.field-meta.xml
<CustomField>
    <fullName>Quote_ID__c</fullName>
    <label>Quote ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>