src/objects/Quote__c/fields/Quote_Value__c.field-meta.xml
<CustomField>
    <fullName>Quote_Value__c</fullName>
    <formula>&apos;$ &apos;+ Total_Net_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Value</label>
    <type>Text</type>
</CustomField>