src/objects/Quote__c/fields/QuoteID__c.field-meta.xml
<CustomField>
    <fullName>QuoteID__c</fullName>
    <formula>HYPERLINK( LEFT( $Api.Enterprise_Server_URL_25 , FIND(&apos;/&apos;, $Api.Enterprise_Server_URL_25, 9) ) + Id, Name +&apos; - &apos;+ TEXT(value( Revision_Number__c )) )</formula>
    <label>Quote ID</label>
    <type>Text</type>
</CustomField>