src/objects/Quote__c/fields/Revision_Number__c.field-meta.xml
<CustomField>
    <fullName>Revision_Number__c</fullName>
    <label>Revision Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>