src/objects/Quote__c/fields/Total_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Net_Price__c</fullName>
    <label>Quote Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>